Create product page with alle products

--- a/Src/HTML/index.html
+++ b/Src/HTML/index.html
@@ -15,21 +15,21 @@
       src="https://kit.fontawesome.com/7e265188ef.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="CSS/style.css" />
-    <link rel="stylesheet" href="CSS/queries.css" />
-    <link rel="stylesheet" href="CSS/pattern-store.css" />
+    <link rel="stylesheet" href="/Src/CSS/style.css" />
+    <link rel="stylesheet" href="/Src/CSS/queries.css" />
 
     <title>EMMA</title>
   </head>
+
   <!-- --------------- -->
   <!-- HEADER SECTION -->
   <!-- --------------- -->
   <header class="flex align-items--center navbar" id="navbar">
-    <a class="header-logo" href="index.html">
+    <a class="header-logo" href="/Src/HTML/index.html">
       <img
         class="logo"
         alt="EMMA by Emma Elisabeth Knit logo"
-        src="Img/Logo/Ren logo.svg"
+        src="/Src/Img/Logo/Ren logo.svg"
       />
     </a>
     <!-- --------------- -->
@@ -48,15 +48,25 @@
         class="main-nav-list-mobile flex flex-dir-column align-items--center hide"
       >
         <li>
-          <a class="main-nav-link cursor-pointer" href="#pattern"
+          <a
+            class="main-nav-link cursor-pointer"
+            href="/src/HTML/index.html/#pattern"
             >OPPSKRIFTER</a
           >
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="#about">OM EMMA</a>
+          <a
+            class="main-nav-link cursor-pointer"
+            href="/Src/HTML/index.html/#about"
+            >OM EMMA</a
+          >
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="#contact">Kontakt</a>
+          <a
+            class="main-nav-link cursor-pointer"
+            href="/Src/HTML/index.html/#contact"
+            >Kontakt</a
+          >
         </li>
       </ul>
       <!-- NAV MENU: BIG SCREEN -->
@@ -64,15 +74,25 @@
         class="main-nav-list font-size-1-6 big-screen flex align-items--center"
       >
         <li>
-          <a class="main-nav-link cursor-pointer" href="#pattern"
+          <a
+            class="main-nav-link cursor-pointer"
+            href="/src/HTML/index.html/#pattern"
             >OPPSKRIFTER</a
           >
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="#about">OM EMMA</a>
+          <a
+            class="main-nav-link cursor-pointer"
+            href="/Src/HTML/index.html/#about"
+            >OM EMMA</a
+          >
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="#contact">Kontakt</a>
+          <a
+            class="main-nav-link cursor-pointer"
+            href="/Src/HTML/index.html/#contact"
+            >Kontakt</a
+          >
         </li>
       </ul>
     </nav>
@@ -90,7 +110,7 @@
           <figure class="hero-img section-img-box">
             <img
               alt="woman wearing a white beanie"
-              src="img/guros-lue/gsnyhet.svg"
+              src="/Src/Img/guros-lue/gsnyhet.svg"
             />
           </figure>
           <section>
@@ -98,7 +118,7 @@
             <h1 class="hero-heading font-size-12-1">Guros lue</h1>
             <a
               class="btn-hero btn font-size-1-6 cursor-pointer"
-              href="pattern-page/guros-lue.html"
+              href="/Src/HTML/Product-page.html"
             >
               Se mer
             </a>
@@ -163,7 +183,7 @@
             </p>
           </section>
           <figure class="section-img-box">
-            <img src="/Img/emma.jpg" />
+            <img src="/Src/Img/emma.jpg" />
           </figure>
         </article>
       </section>
@@ -185,22 +205,22 @@
           <article class="instagram-gallery grid grid--4-cols">
             <figure class="gallery-item">
               <a target="_blank" href="https://www.instagram.com/p/CkLjX-GjSKs/"
-                ><img src="img/Instagram/1.jpg"
+                ><img src="/src/img/Instagram/1.jpg"
               /></a>
             </figure>
             <figure class="gallery-item">
               <a target="_blank" href="https://www.instagram.com/p/Cj2JJpTsAPz/"
-                ><img src="img/Instagram/3.jpg"
+                ><img src="/src/img/Instagram/3.jpg"
               /></a>
             </figure>
             <figure class="gallery-item">
               <a target="_blank" href="https://www.instagram.com/p/CjsIPEgsPNo/"
-                ><img src="img/Instagram/5.jpg"
+                ><img src="/src/img/Instagram/5.jpg"
               /></a>
             </figure>
             <figure class="gallery-item">
               <a target="_blank" href="https://www.instagram.com/p/Cjpus71M9Mb/"
-                ><img src="img/Instagram/6.jpg"
+                ><img src="/src/img/Instagram/6.jpg"
               /></a>
             </figure>
           </article>
@@ -242,12 +262,12 @@
                 <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
-                    href="/pattern-page/guros-lue.html"
+                    href="/Src/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="img/Guros-lue/6.jpg"
+                        src="/src/img/Guros-lue/gl1.png"
                         alt="woman with a knitted sweater on a boat"
                       />
                     </figure>
@@ -262,12 +282,12 @@
                 <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
-                    href="/pattern-page/fridas-genser.html"
+                    href="/Src/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="img/Malins-genser/2.jpg"
+                        src="/src/img/Malins-genser/1.png"
                         alt="woman with a knitted sweater on a boat"
                       />
                     </figure>
@@ -283,12 +303,12 @@
                 <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
-                    href="/pattern-page/guros-genser.html"
+                    href="/Src/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="img/Guros-genser/10.jpg"
+                        src="/Src/Img/Guros-genser/3.png"
                         alt="Green knitted sweater"
                       />
                     </figure>
@@ -303,12 +323,12 @@
                 <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
-                    href="/pattern-page/fridas-genser.html"
+                    href="/Src/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="img/Fridas-genser/19.jpg"
+                        src="/Src/Img/Fridas-genser/3.png"
                         alt="purple knitted sweater"
                       />
                     </figure>
@@ -324,12 +344,12 @@
                 <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
-                    href="/pattern-page/evelinagenser.html"
+                    href="/Src/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="img/Evelinagenser/20.jpg"
+                        src="/Src/Img/Evelinagenser/Evelinagenser 2.jpg"
                         alt="purple knitted sweater"
                       />
                     </figure>
@@ -350,12 +370,12 @@
                 <article class="pattern-card english">
                   <a
                     class="text-decoration-none"
-                    href="/pattern-page/guros-sweater.html"
+                    href="/Src/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="img/Guros-genser/10.jpg"
+                        src="/Src/Img/Guros-genser/3.png"
                         alt="Green knitted sweater"
                       />
                     </figure>
@@ -370,12 +390,12 @@
                 <article class="pattern-card english">
                   <a
                     class="text-decoration-none"
-                    href="/pattern-page/fridas-sweater.html"
+                    href="/Src/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="img/Fridas-genser/19.jpg"
+                        src="/Src/Img/Fridas-genser/3.png"
                         alt="purple knitted sweater"
                       />
                     </figure>
@@ -396,12 +416,12 @@
                 <article class="pattern-card svenska">
                   <a
                     class="text-decoration-none"
-                    href="/pattern-page/evelinagenser-svensk.html"
+                    href="/Src/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="img/Evelinagenser/20.jpg"
+                        src="/Src/Img/Evelinagenser/Evelinagenser 2.jpg"
                         alt="purple knitted sweater"
                       />
                     </figure>
