--- a/Src/HTML/index.html
+++ b/Src/HTML/index.html
@@ -50,7 +50,7 @@
         <li>
           <a
             class="main-nav-link cursor-pointer"
-            href="/src/HTML/index.html/#pattern"
+            href="/Src/HTML/index.html/#pattern"
             >OPPSKRIFTER</a
           >
         </li>
@@ -479,7 +479,7 @@
         </form>
       </section>
     </main>
-    <script src="/script.js"></script>
+    <script src="/Src/JS/script.js"></script>
   </body>
   <!-- --------------- -->
   <!-- FOOTER SECTION -->
