Delete src file

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,8 +15,8 @@
       src="https://kit.fontawesome.com/7e265188ef.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/Src/CSS/style.css" />
-    <link rel="stylesheet" href="/Src/CSS/queries.css" />
+    <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="/CSS/queries.css" />
 
     <title>EMMA</title>
   </head>
@@ -25,11 +25,11 @@
   <!-- HEADER SECTION -->
   <!-- --------------- -->
   <header class="flex align-items--center navbar" id="navbar">
-    <a class="header-logo" href="/Src/HTML/index.html">
+    <a class="header-logo" href="/HTML/index.html">
       <img
         class="logo"
         alt="EMMA by Emma Elisabeth Knit logo"
-        src="/Src/Img/Logo/Ren logo.svg"
+        src="/Img/Logo/Ren logo.svg"
       />
     </a>
     <!-- --------------- -->
@@ -50,21 +50,18 @@
         <li>
           <a
             class="main-nav-link cursor-pointer"
-            href="/Src/HTML/index.html/#pattern"
+            href="
+           index.html/#pattern"
             >OPPSKRIFTER</a
           >
         </li>
         <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/Src/HTML/index.html/#about"
+          <a class="main-nav-link cursor-pointer" href="index.html/#about"
             >OM EMMA</a
           >
         </li>
         <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/Src/HTML/index.html/#contact"
+          <a class="main-nav-link cursor-pointer" href="index.html/#contact"
             >Kontakt</a
           >
         </li>
@@ -74,23 +71,17 @@
         class="main-nav-list font-size-1-6 big-screen flex align-items--center"
       >
         <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/src/HTML/index.html/#pattern"
+          <a class="main-nav-link cursor-pointer" href="#pattern"
             >OPPSKRIFTER</a
           >
         </li>
         <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/Src/HTML/index.html/#about"
+          <a class="main-nav-link cursor-pointer" href="index.html/#about"
             >OM EMMA</a
           >
         </li>
         <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/Src/HTML/index.html/#contact"
+          <a class="main-nav-link cursor-pointer" href="index.html/#contact"
             >Kontakt</a
           >
         </li>
@@ -110,7 +101,7 @@
           <figure class="hero-img section-img-box">
             <img
               alt="woman wearing a white beanie"
-              src="/Src/Img/guros-lue/gsnyhet.svg"
+              src="/Img/guros-lue/gsnyhet.svg"
             />
           </figure>
           <section>
@@ -118,7 +109,7 @@
             <h1 class="hero-heading font-size-12-1">Guros lue</h1>
             <a
               class="btn-hero btn font-size-1-6 cursor-pointer"
-              href="/Src/HTML/Product-page.html"
+              href="/HTML/Product-page.html"
             >
               Se mer
             </a>
@@ -183,7 +174,7 @@
             </p>
           </section>
           <figure class="section-img-box">
-            <img src="/Src/Img/emma.jpg" />
+            <img src="/Img/emma.jpg" />
           </figure>
         </article>
       </section>
@@ -205,22 +196,22 @@
           <article class="instagram-gallery grid grid--4-cols">
             <figure class="gallery-item">
               <a target="_blank" href="https://www.instagram.com/p/CkLjX-GjSKs/"
-                ><img src="/src/img/Instagram/1.jpg"
+                ><img src="/img/Instagram/1.jpg"
               /></a>
             </figure>
             <figure class="gallery-item">
               <a target="_blank" href="https://www.instagram.com/p/Cj2JJpTsAPz/"
-                ><img src="/src/img/Instagram/3.jpg"
+                ><img src="/img/Instagram/3.jpg"
               /></a>
             </figure>
             <figure class="gallery-item">
               <a target="_blank" href="https://www.instagram.com/p/CjsIPEgsPNo/"
-                ><img src="/src/img/Instagram/5.jpg"
+                ><img src="/img/Instagram/5.jpg"
               /></a>
             </figure>
             <figure class="gallery-item">
               <a target="_blank" href="https://www.instagram.com/p/Cjpus71M9Mb/"
-                ><img src="/src/img/Instagram/6.jpg"
+                ><img src="/img/Instagram/6.jpg"
               /></a>
             </figure>
           </article>
@@ -262,12 +253,12 @@
                 <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
-                    href="/Src/HTML/Product-page.html"
+                    href="/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="/src/img/Guros-lue/gl1.png"
+                        src="/img/Guros-lue/gl1.png"
                         alt="woman with a knitted sweater on a boat"
                       />
                     </figure>
@@ -282,12 +273,12 @@
                 <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
-                    href="/Src/HTML/Product-page.html"
+                    href="/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="/src/img/Malins-genser/1.png"
+                        src="/img/Malins-genser/1.png"
                         alt="woman with a knitted sweater on a boat"
                       />
                     </figure>
@@ -303,12 +294,12 @@
                 <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
-                    href="/Src/HTML/Product-page.html"
+                    href="/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="/Src/Img/Guros-genser/3.png"
+                        src="/Img/Guros-genser/3.png"
                         alt="Green knitted sweater"
                       />
                     </figure>
@@ -323,12 +314,12 @@
                 <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
-                    href="/Src/HTML/Product-page.html"
+                    href="/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="/Src/Img/Fridas-genser/3.png"
+                        src="/Img/Fridas-genser/3.png"
                         alt="purple knitted sweater"
                       />
                     </figure>
@@ -344,12 +335,12 @@
                 <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
-                    href="/Src/HTML/Product-page.html"
+                    href="/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="/Src/Img/Evelinagenser/Evelinagenser 2.jpg"
+                        src="/Img/Evelinagenser/Evelinagenser 2.jpg"
                         alt="purple knitted sweater"
                       />
                     </figure>
@@ -370,12 +361,12 @@
                 <article class="pattern-card english">
                   <a
                     class="text-decoration-none"
-                    href="/Src/HTML/Product-page.html"
+                    href="/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="/Src/Img/Guros-genser/3.png"
+                        src="/Img/Guros-genser/3.png"
                         alt="Green knitted sweater"
                       />
                     </figure>
@@ -390,12 +381,12 @@
                 <article class="pattern-card english">
                   <a
                     class="text-decoration-none"
-                    href="/Src/HTML/Product-page.html"
+                    href="/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="/Src/Img/Fridas-genser/3.png"
+                        src="/Img/Fridas-genser/3.png"
                         alt="purple knitted sweater"
                       />
                     </figure>
@@ -416,12 +407,12 @@
                 <article class="pattern-card svenska">
                   <a
                     class="text-decoration-none"
-                    href="/Src/HTML/Product-page.html"
+                    href="/HTML/Product-page.html"
                   >
                     <figure class="pattern-card-item">
                       <img
                         class="pattern-card-img"
-                        src="/Src/Img/Evelinagenser/Evelinagenser 2.jpg"
+                        src="/Img/Evelinagenser/Evelinagenser 2.jpg"
                         alt="purple knitted sweater"
                       />
                     </figure>
@@ -479,7 +470,7 @@
         </form>
       </section>
     </main>
-    <script src="/Src/JS/script.js"></script>
+    <script src="/JS/script.js"></script>
   </body>
   <!-- --------------- -->
   <!-- FOOTER SECTION -->
