Update contact section classes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -51,19 +51,15 @@
           <a
             class="main-nav-link cursor-pointer"
             href="
-           index.html/#pattern"
+            #pattern"
             >OPPSKRIFTER</a
           >
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="index.html/#about"
-            >OM EMMA</a
-          >
+          <a class="main-nav-link cursor-pointer" href="#about">OM EMMA</a>
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="index.html/#contact"
-            >Kontakt</a
-          >
+          <a class="main-nav-link cursor-pointer" href="#contact">Kontakt</a>
         </li>
       </ul>
       <!-- NAV MENU: BIG SCREEN -->
@@ -76,14 +72,10 @@
           >
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="index.html/#about"
-            >OM EMMA</a
-          >
+          <a class="main-nav-link cursor-pointer" href="#about">OM EMMA</a>
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="index.html/#contact"
-            >Kontakt</a
-          >
+          <a class="main-nav-link cursor-pointer" href="#contact">Kontakt</a>
         </li>
       </ul>
     </nav>
@@ -436,7 +428,7 @@
       <!-- CONTACT FORM SECTION -->
       <!-- -------------------- -->
       <section
-        class="contact-section page-section container align-items--center flex flex-dir-column"
+        class="contact-section container align-items--center flex flex-dir-column"
         id="contact"
       >
         <h2 class="contact-heading h2-heading font-size-4-8">Ta Kontakt</h2>
